2001-10-25 Daniel Horn <hellcatv@hotmail.com>
	* added starsystem based lighting (now planets may emit lights
	* define a light at the top of a system then any planets may use such a light. 
	* data directory changed so that starships get hot (glow) when they get close to the sun.  Ambient light index increased for dinged up monitors (you can edit it yourself... 

2001-10-24 Daniel Horn <hellcatv@hotmail.com>

	* added Turrets to the scenes.  They may use any preconcieved AI script, but right now they just load "turntowards" and "fireat" target
	* made an ifdef to allow the user to fly a turret  #ifdef IPILOTTURRET
	* IFLYTURRET will only work if the unit in question has a turret
	* add turrets as follows:  	<Subunit file="rapier" y="10" ri="0" rj="1" rk="0" pi="0" pj="0" pk="1" restricted="-.5"/>
	* turrets may not use their own type for a turret...
	* retricted means dot with "Ri,Rj,Rk" vector must be greater than that value  (so turrets can't turn inside a hull)	

2001-10-24 Alexander Rawass <alexannika@users.sourceforge.net>

	* new command-line argument: vegastrike <mission-name>
	* removed old un-needed code (old key-bindings)
	* removed debugging output from my routines
	* removed old data dir from vegastrike/Makefile.am
	* removed data/Makefile from configure.in

	
2001-10-24 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added support for analogue hatswitch, should work now
	* ABKey can now be used on two or more bindings


2001-10-23 Daniel Horn <hellcatv@hotmail.com>

	* added cloaking as a feature
	* added cloaking sound to the config file
	* added cloaking to the AI
	* made it so targetting respected cloaked starships
	* made it so weapons respected cloaked starships
	* added CloakFor AI script that will cloak for N seconds
	* added a cloak keybinding
	* added the basis for fog in the future

2001-10-23 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* changed a lot in in_joystick to support any number of axes