@@ -1,7 +1,14 @@
+2001-10-25 Alexander Rawass <alexannika@users.sourceforge.net>
+	
+	* implemented orders in mission file (preliminary)
+	* wrote stuff to use it in createObjects(), but could not be used properly
+	
+
 2001-10-25 Daniel Horn <hellcatv@hotmail.com>
 	* added starsystem based lighting (now planets may emit lights
 	* define a light at the top of a system then any planets may use such a light. 
 	* data directory changed so that starships get hot (glow) when they get close to the sun.  Ambient light index increased for dinged up monitors (you can edit it yourself... 
+
 
 2001-10-24 Daniel Horn <hellcatv@hotmail.com>
 
@@ -11,6 +18,7 @@
 	* add turrets as follows:  	<Subunit file="rapier" y="10" ri="0" rj="1" rk="0" pi="0" pj="0" pk="1" restricted="-.5"/>
 	* turrets may not use their own type for a turret...
 	* retricted means dot with "Ri,Rj,Rk" vector must be greater than that value  (so turrets can't turn inside a hull)	
+
 
 2001-10-24 Alexander Rawass <alexannika@users.sourceforge.net>
 
